added some images for skills icons

--- a/personal-website/src/components/about/about.css
+++ b/personal-website/src/components/about/about.css
@@ -47,3 +47,11 @@
     width: 30%;
     text-align: center;
 }
+
+.skills{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    width: 100%;
+    align-items: start;
+}
