--- a/personal-website/src/components/skill/skill.css
+++ b/personal-website/src/components/skill/skill.css
@@ -1,13 +1,26 @@
-.skill-btn{
+.skill-icon{
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 25px;
-    color: var(--deepPink);
     width: 50px;
     height: 50px;
     border-radius: 5px;
     border: 2px var(--brown) solid;
     box-shadow: 2px 2px 0px var(--brown);
     background-color: var(--white);
+}
+
+.skill-icon img{
+    width: 80%;
+    height: 80%;
+    object-fit: fit;
+}
+
+
+.skill{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
 }
