--- a/personal-website/src/components/about/about.css
+++ b/personal-website/src/components/about/about.css
@@ -11,7 +11,7 @@
     padding: 10% 5%;
     display: flex;
     justify-content: space-between;
-    gap: 5%;
+    gap: 10%;
 }
 .profile-card{
     display: flex;
@@ -19,10 +19,10 @@
     align-items: center;
     justify-content: center;
     gap: 20px;
+    flex: 1;
 }
 .profile-card img{
-    width: 80%;
-    height: 80%;
+    width: 70%;
 }
 .resume-btn{
     border: 2px var(--brown) solid;
@@ -33,9 +33,10 @@
     width: 80%;
 }
 .description{
+    flex: 2;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 30px;
 }
 
 .skills-title{
@@ -44,14 +45,43 @@
     border-radius: 20px;
     background-color: var(--deepYellow);
     padding: 10px 40px;
-    width: 30%;
-    text-align: center;
+    /* width: 20%; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 180px;
 }
 
 .skills{
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 15%);
     flex-wrap: wrap;
-    gap: 30px;
+    padding: 5% 10%;
+    height: 100%;
+    gap: 30px;  
     width: 100%;
-    align-items: start;
+    background-color: var(--yellow);
+    border: 2px var(--brown) solid;
+    box-shadow: 4px 4px 0px var(--brown);
+    border-radius: 20px;
+    justify-content: space-between
+}
+
+
+@media only screen and (max-width: 768px) {
+    .about-content{
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+        padding: 20% 5% 10% 5%;
+    }
+    .description{
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+
+        ul{
+           max-width: 90%; 
+        }
+    }
 }
