--- a/personal-website/src/components/landing/landing.css
+++ b/personal-website/src/components/landing/landing.css
@@ -33,7 +33,7 @@
 
 @media only screen and (max-width: 768px) {
     .landing{
-        background-color: var(--white);
+        background-color: var(--lightPink);
     }
     .line{
         display: none;
