decor dots added

--- a/personal-website/src/index.css
+++ b/personal-website/src/index.css
@@ -3,6 +3,7 @@
   --white: #ffffff;
   --deepPink: #F9938E;
   --lightPink: #FFE0DD;
+  --orange: #F3942F;
   --deepYellow: #FBCD9C;
   --yellow: #FFDFB0;
   --blue: #A8D4F3;
