--- a/personal-website/src/components/about/about.css
+++ b/personal-website/src/components/about/about.css
@@ -51,18 +51,22 @@
   max-width: 180px;
 }
 
-.skills {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, 15%);
-  flex-wrap: wrap;
-  padding: 5% 10%;
-  height: 100%;
-  gap: 30px;
+.skills-wrapper{
+  position: relative;
   width: 100%;
   background-color: var(--yellow);
   border: 2px var(--brown) solid;
   box-shadow: 4px 4px 0px var(--brown);
   border-radius: 20px;
+}
+
+.skills {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 15%);
+  padding: 5% 10%;
+  height: 100%;
+  gap: 30px;
+  width: 100%;
   justify-content: space-between;
 }
 
