--- a/personal-website/src/index.css
+++ b/personal-website/src/index.css
@@ -74,12 +74,17 @@ h5 {
   paint-order: stroke fill;
 }
 
-p, h6 {
+h6 {
   font-size: var(--font-size-xs);  /* 12px */
   color: var(--white);
   text-shadow: 1px 1px 0px var(--brown);
   -webkit-text-stroke: 2px var(--brown);
   paint-order: stroke fill;
+}
+
+p {
+  font-size: var(--font-size-xs);  /* 16px */
+  color: var(--brown);
 }
 
 button{
@@ -113,10 +118,14 @@ body {
   max-width: 1000px;
   width: 90%;
   margin: 100px auto;
+  gap: 100px;
 }
 
 @media only screen and (max-width: 768px) {
   span{
     font-size: var(--font-size-sm);
+  }
+  h4{
+    font-size: var(--font-size-sm);  /* 16px */
   }
 }
