--- a/personal-website/src/components/projects/projectCard/projectCard.css
+++ b/personal-website/src/components/projects/projectCard/projectCard.css
@@ -3,16 +3,26 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 20px;
+    padding: 30px 20px;
     background-color: var(--white);
     border-radius: 20px;
-    border: 2px var(--brown) solid;
+    border: 3px var(--brown) solid;
     box-shadow: 2px 2px 0px var(--brown);
     max-width: 350px;
-    max-height: 550px;
+    min-height: 550px;
     width: 100%;
     gap: 20px;
+    transition: transform 0.3s ease;
+    cursor: pointer;
 }
+
+.projectCard:hover{
+    transform: scale(1.05);
+    border: 2px var(--brown) solid;
+    box-shadow: 8px 8px 0px #D94246;
+
+}
+
 .project-image{
     width: 100%;
     border-radius: 10px;
@@ -24,7 +34,8 @@
     align-items: center;
     justify-content: center;
     gap: 20px;
-    /* width: 100%; */
+    width: 100%;
+    padding: 0 10px;
 }
 
 .project-title {
@@ -32,7 +43,8 @@
   align-items: center;
   width: 100%;
   flex: 1;
-  white-space: nowrap;
+  /* white-space: nowrap; */
+  text-align: center;
 }
 
 .project-title::before,
@@ -42,6 +54,54 @@
   height: 2px;
   background-color: #d17874; /* soft red line color */
   margin: 0 1rem;
-  width: 100%;
+  width: 10%;
 
+}
+
+.skillTags{
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  gap: 10px;
+  justify-content: center;
+}
+
+.skillTag{
+  border: 2px solid var(--brown);
+  border-radius: 20px;
+  padding: 5px 10px;
+
+}
+
+.skillTag:hover{
+  background-color: var(--brown);
+  color: var(--white);
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.projectLinks{
+  display: flex;
+  gap: 30px;
+  width: 100%;
+  justify-content: center;
+  
+}
+
+.projectLink{
+  display: flex;
+  gap: 5px;
+  color: var(--brown);
+  z-index: 3;
+}
+
+.projectLink a{
+  position: relative;
+  color: var(--brown);
+  text-decoration: none;
+  font-size: var(--font-size-sm);
+  font-weight: bold;
+}
+
+.projectLink a:hover::after {
+  background-color: var(--deepPink);
 }
