--- a/personal-website/src/components/projects/projects.css
+++ b/personal-website/src/components/projects/projects.css
@@ -1,4 +1,4 @@
-.project {
+.projects {
   background-color: var(--red);
   width: 100%;
   border-radius: 20px;
@@ -9,7 +9,7 @@
   position: relative;
 }
 
-.project-content {
+.projects-content {
   width: 100%;
   padding: 10% 5%;
   display: flex;
