--- a/personal-website/src/index.css
+++ b/personal-website/src/index.css
@@ -69,8 +69,8 @@ span{
 h5 {
   font-size: var(--font-size-sm);  /* 16px */
   color: var(--white);
-  text-shadow: 4px 4px 0px var(--brown);
-  -webkit-text-stroke: 4px var(--brown);
+  text-shadow: 2px 2px 0px var(--brown);
+  -webkit-text-stroke: 2px var(--brown);
   paint-order: stroke fill;
 }
 
@@ -121,11 +121,32 @@ body {
   gap: 100px;
 }
 
+a::after {
+  content: '';
+  position: absolute;
+  left: 10%;
+  bottom: -4px;
+  width: 0%;
+  height: 3px;
+  border-radius: 2px;
+  background-color: var(--white);
+  transition: width 0.3s ease;
+}
+
+a:hover::after {
+width: 80%;
+}
+
 @media only screen and (max-width: 768px) {
   span{
     font-size: var(--font-size-sm);
   }
   h4{
     font-size: var(--font-size-sm);  /* 16px */
+  }
+  h5{
+    font-size: var(--font-size-xs);  /* 12px */
+
+
   }
 }
