--- a/personal-website/src/components/iconSet/iconSet.css
+++ b/personal-website/src/components/iconSet/iconSet.css
@@ -6,7 +6,7 @@
     gap: 40px;
     padding: 10px;
 }
-.iconSet button{
+.iconSet a{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -24,13 +24,13 @@
     gap: 20px;
 }
 
-.iconSet.small button{
+.iconSet.small a{
     font-size: 15px;
     width: 30px;
     height: 30px;
 }
 
-.iconSet button:hover{
+.iconSet a:hover{
     background-color: var(--deepPink);
     color: var(--white);
     transition: 0.3s ease;
@@ -41,7 +41,7 @@
         gap: 20px;
         padding: 10px;
     }
-    .iconSet button{
+    .iconSet a{
         width: 30px;
         height: 30px;
         font-size: 20px;
