--- a/personal-website/src/components/projects/projectCard/projectCard.css
+++ b/personal-website/src/components/projects/projectCard/projectCard.css
@@ -1,50 +1,65 @@
-.projectCard{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 30px 20px;
-    background-color: var(--white);
-    border-radius: 20px;
-    border: 3px var(--brown) solid;
-    box-shadow: 2px 2px 0px var(--brown);
-    max-width: 350px;
-    min-height: 550px;
-    width: 100%;
-    gap: 20px;
-    transition: transform 0.3s ease;
-    cursor: pointer;
-}
+.projectCard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 30px 20px;
+  background-color: var(--white);
+  border-radius: 20px;
+  border: 3px var(--brown) solid;
+  box-shadow: 2px 2px 0px var(--brown);
+  max-width: 350px;
+  min-height: 550px;
+  width: 100%;
+  gap: 20px;
+  transition: transform 0.3s ease;
+  cursor: pointer;
 
-.projectCard:hover{
-    transform: scale(1.05);
-    border: 2px var(--brown) solid;
-    box-shadow: 8px 8px 0px #D94246;
 
 }
 
-.project-image{
-    width: 100%;
-    border-radius: 10px;
-    object-fit: cover;
+.projectCard:hover {
+  transform: scale(1.05);
+  border: 2px var(--brown) solid;
+  box-shadow: 8px 8px 0px #d94246;
 }
-.project-info{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 20px;
-    width: 100%;
-    padding: 0 10px;
+
+.project-image-wrapper {
+  position: relative;
+  width: 100%;
+  height: 150px;
+  overflow: hidden;
+  border-radius: 10px;
+  object-fit: cover;
+  display: inline-block;
+}
+
+.projectCard:hover .project-image {
+  transform: scale(1.1);
+  transition: transform 0.3s ease-in-out;
+}
+
+.project-image {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  object-fit: cover;
+}
+.project-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  width: 100%;
+  padding: 0 10px;
 }
 
 .project-title {
   display: flex;
   align-items: center;
   width: 100%;
-  flex: 1;
-  /* white-space: nowrap; */
   text-align: center;
+  justify-content: center;
+
 }
 
 .project-title::before,
@@ -55,46 +70,44 @@
   background-color: #d17874; /* soft red line color */
   margin: 0 1rem;
   width: 10%;
-
 }
 
-.skillTags{
+.skillTags {
   display: flex;
   width: 100%;
   flex-wrap: wrap;
   gap: 10px;
   justify-content: center;
+  flex: 2;
 }
 
-.skillTag{
+.skillTag {
   border: 2px solid var(--brown);
   border-radius: 20px;
   padding: 5px 10px;
-
 }
 
-.skillTag:hover{
+.skillTag:hover {
   background-color: var(--brown);
   color: var(--white);
   transition: background-color 0.3s ease, color 0.3s ease;
 }
 
-.projectLinks{
+.projectLinks {
   display: flex;
   gap: 30px;
   width: 100%;
   justify-content: center;
-  
 }
 
-.projectLink{
+.projectLink {
   display: flex;
   gap: 5px;
   color: var(--brown);
   z-index: 3;
 }
 
-.projectLink a{
+.projectLink a {
   position: relative;
   color: var(--brown);
   text-decoration: none;
