--- a/personal-website/src/index.css
+++ b/personal-website/src/index.css
@@ -28,7 +28,7 @@
   box-sizing: border-box;
   font-family: "Quicksand", sans-serif;
   font-weight: 700;
-  
+
 }
 
 h1 {
@@ -62,10 +62,7 @@ h4 {
   -webkit-text-stroke: 2px var(--brown);
   paint-order: stroke fill;
 }
-span{
-  font-size: var(--font-size-md);  /* 20px */
-  color: var(--brown);
-}
+
 h5 {
   font-size: var(--font-size-sm);  /* 16px */
   color: var(--white);
@@ -85,6 +82,13 @@ h6 {
 p {
   font-size: var(--font-size-xs);  /* 16px */
   color: var(--brown);
+}
+
+.no-border-style{
+  color: var(--brown);
+  -webkit-text-stroke: 0px !important;
+  box-shadow: none !important;
+  text-shadow: none !important;
 }
 
 button{
@@ -140,9 +144,6 @@ width: 80%;
 }
 
 @media only screen and (max-width: 768px) {
-  span{
-    font-size: var(--font-size-sm);
-  }
   h4{
     font-size: var(--font-size-sm);  /* 16px */
   }
