--- a/personal-website/src/components/hobby/hobby.css
+++ b/personal-website/src/components/hobby/hobby.css
@@ -1,12 +1,6 @@
 .hobby {
   background-color: var(--purple);
-  width: 100%;
-  border-radius: 20px;
-  border: 2px var(--brown) solid;
   box-shadow: 2px 2px 0px var(--deepPurple);
-  display: flex;
-  justify-content: center;
-  position: relative;
   height: 100%;
 }
 
@@ -23,5 +17,6 @@
 iframe{
     width: 100%;
     height: 400px;
-    min-width: 100% !important
+    min-width: 100% !important;
+    border-radius: 15px !important;
 }
