--- a/personal-website/src/components/projects/projects.css
+++ b/personal-website/src/components/projects/projects.css
@@ -1,12 +1,6 @@
 .projects {
   background-color: var(--red);
-  width: 100%;
-  border-radius: 20px;
-  border: 2px var(--brown) solid;
-  box-shadow: 2px 2px 0px var(--brown);
-  display: flex;
-  justify-content: center;
-  position: relative;
+  box-shadow: 14px 14px 0px var(--brightRed);
 }
 
 .projects-content {
