added resume and fixed media query

--- a/personal-website/src/index.css
+++ b/personal-website/src/index.css
@@ -94,6 +94,7 @@ p {
   -webkit-text-stroke: 0px !important;
   box-shadow: none !important;
   text-shadow: none !important;
+  paint-order: normal !important;
 }
 
 button{
