--- a/src/components/projects/projectCard/projectCard.css
+++ b/src/components/projects/projectCard/projectCard.css
@@ -7,7 +7,7 @@
   border-radius: 20px;
   border: 3px var(--brown) solid;
   box-shadow: 2px 2px 0px var(--brown);
-  max-width: 350px;
+  max-width: 330px;
   min-height: 550px;
   width: 100%;
   gap: 20px;
@@ -66,7 +66,8 @@
 .project-title::after {
   content: "";
   /* flex: 1; */
-  height: 2px;
+  height: 3px;
+  border-radius: 2px;
   background-color: #d17874; /* soft red line color */
   margin: 0 1rem;
   width: 10%;
