--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,7 @@ h1 {
   font-size: var(--font-size-xxl); /* 64px */
   color: var(--white);
   text-shadow: 4px 4px 0px var(--brown);
-  -webkit-text-stroke: 4px var(--brown);
+  -webkit-text-stroke: 5px var(--brown);
   paint-order: stroke fill;
 }
 
@@ -113,8 +113,7 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* background-image: url(../public/img/background.png); */
-  /* background-image: url("/img/background.png"); */
+  background-image: url(../public/img/background.png);
 
   background-color: rgba(255, 255, 255, 0.6);
   background-blend-mode: overlay;
@@ -127,7 +126,7 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  max-width: 1000px;
+  max-width: 800px;
   width: 90%;
   margin: 200px auto;
   gap: 150px;
@@ -208,9 +207,5 @@ width: 80%;
   h4{
     font-size: var(--font-size-sm);  /* 16px */
   }
-  h5{
-    font-size: var(--font-size-xs);  /* 12px */
-
-
-  }
+ 
 }
