--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -6,11 +6,31 @@
     padding: 20px 10%;
     max-height: 80px;
 
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    /* transition: top 0.3s; */
+    transition: 0.3s ease-in-out;
+    backdrop-filter: blur(8px);
+
     img{
         width: 40px;
         height: 40px;
         border-radius: 50%;
     }
+
+}
+
+.navbar--visible {
+    transform: translateY(0);
+    transition: 0.3s ease-in-out;
+    background-color: rgb(from var(--deepPink) r g b / 0.5);
+  }
+  
+.navbar--hidden {
+    transform: translateY(-100%);
+    transition: 0.3s ease-in-out;
+    background-color: rgb(from var(--deepPink) r g b / 0.5);
 }
 
 
