--- a/src/index.css
+++ b/src/index.css
@@ -120,7 +120,14 @@ body {
   height: 200vh;
 }
 
+.navbar-wrapper{
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  transition: top 0.3s;
+  /* backdrop-filter: blur(8px); */
 
+}
 .main{
   display: flex;
   justify-content: center;
@@ -192,7 +199,7 @@ width: 80%;
 }
 
 .top-footer img:hover{
-  transform: scale(1.1);
+  transform: translateY(-10px);
   transition: transform 0.3s ease-in-out;
 }
 .bot-footer{
