--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
   --deepYellow: #FBCD9C;
   --yellow: #FFDFB0;
   --blue: #A8D4F3;
+  --lightBlue: #D9F0FF;
   --deepBlue: #207BBC;
   --brown: #5F4253;
   --red: #F9938E;
